# wyrm

./: .gitignore  README.md  test_html.html
backend/src/: config.py  main.py  test.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
frontend/src/components/: Search.svelte
frontend/src/params/: uuid.ts
frontend/src/routes/: +layout.svelte  +page.server.ts
postprocessor/: requirements.txt
postprocessor/src/: asd.html  main.py  my_webpage.html
postprocessor/src/common/: __init__.py
postprocessor/src/models/: __init__.py
postprocessor/src/queries/: create_article.edgeql  create_article_async_edgeql.py  get_articles_without_desc_embeddings.edgeql  get_articles_without_desc_embeddings_async_edgeql.py  get_articles_without_title_embeddings.edgeql  get_articles_without_title_embeddings_async_edgeql.py  get_unprocessed_webpages.edgeql  get_unprocessed_webpages_async_edgeql.py  update_article_desc_embedding.edgeql  (+3 more)
scraper/: pyproject.toml  requirements.txt
scraper/src/: scrapy.cfg  telexmap.json
scraper/src/telexhu/: items.py  middlewares.py  pipelines.py  seed.py  settings.py  test.ipynb
scraper/src/telexhu/queries/: create_article.edgeql  create_webpage.edgeql  create_website.edgeql  get_website.edgeql
scraper/src/telexhu/spiders/: index.py  mandiner.py  sitemap.py  telex.py
scraper/telexhu/telexhu/: items.py  middlewares.py  pipelines.py  settings.py
scraper/telexhu/telexhu/spiders/: sitemap.py
webapp/: .gitignore  .prettierrc  package-lock.json  package.json  pnpm-lock.yaml
webapp/src/: hooks.server.ts
(+30 files in other folders)
