[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["popolopo <maafidavid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
edgedb = "^1.7.0"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.4.2"
openai = "^0.28.1"
dotenv-python = "^0.0.1"
langchain = "^0.0.304"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
